--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@danilosampaio/react-tag-input",
-  "version": "1.1.0",
+  "name": "react-tag-input-fork",
+  "version": "1.1.1",
   "description": "A temporary fork from @pathofdev/react-tag-input with PR #8 - Add option for accepting input via different keys and onBlur",
   "main": "./build/umd/index.min.js",
   "module": "./build/module/index.js",
@@ -28,7 +28,7 @@
     "react tag input component",
     "react tag input"
   ],
-  "author": "pathof.dev",
+  "author": "danilosampaio",
   "license": "MIT",
   "devDependencies": {
     "@types/react": "^16.8.25",
